--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,28 +1,49 @@
 @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
+    font-display: swap;
+    font-family: "Inter";
+    font-style: normal;
     font-weight: 400;
-    font-display: swap;
-    src: local(''),
-         url(../fonts/inter-v12-latin-ext_latin-regular.woff2) format('woff2');
+    src: url("../fonts/inter-v18-latin_latin-ext-regular.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
+    font-display: swap;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 400;
+    src: url("../fonts/inter-v18-latin_latin-ext-italic.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: normal;
     font-weight: 600;
-    font-display: swap;
-    src: local(''),
-         url(../fonts/inter-v12-latin-ext_latin-600.woff2) format('woff2');
+    src: url("../fonts/inter-v18-latin_latin-ext-600.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: 'Inter';
-    font-style:  normal;
-    font-weight: 700;
     font-display: swap;
-    src: local(''),
-         url(../fonts/inter-v12-latin-ext_latin-700.woff2) format('woff2');
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 600;
+    src: url("../fonts/inter-v18-latin_latin-ext-600italic.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 700;
+    src: url("../fonts/inter-v18-latin_latin-ext-700.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 700;
+    src: url("../fonts/inter-v18-latin_latin-ext-700italic.woff2") format("woff2");
 }
 
 @font-face {
