--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -64,6 +64,54 @@
 
 @font-face {
     font-display: swap;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    src: url("../fonts/inter-v18-latin_latin-ext-regular.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 400;
+    src: url("../fonts/inter-v18-latin_latin-ext-italic.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 600;
+    src: url("../fonts/inter-v18-latin_latin-ext-600.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 600;
+    src: url("../fonts/inter-v18-latin_latin-ext-600italic.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 700;
+    src: url("../fonts/inter-v18-latin_latin-ext-700.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 700;
+    src: url("../fonts/inter-v18-latin_latin-ext-700italic.woff2") format("woff2");
+}
+
+@font-face {
+    font-display: swap;
     font-family: "Source Code Pro";
     font-style: normal;
     font-weight: 400;
