--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -155,6 +155,12 @@ th,
     font-weight: 600; /* Bulma uses `font-weight: 600` nearly everywhere else. */
 }
 
+@media screen and (min-width: 768px) {
+    th.column-date {
+        width: 15% !important;
+    }
+}
+
 .card-content {
     padding: 1rem;
 }
